--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.5",
     "astro": "^5.16.6",
+    "mqtt": "^5.14.1",
     "tailwindcss": "^3.4.19"
   }
 }
